
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint32_t ;
struct ucode_get_rev_struct {int ugv_errno; scalar_t__ ugv_size; int * ugv_rev; } ;


 int BUF_SIZE ;
 int O_RDONLY ;
 int UCODE_DEV ;
 int UCODE_GET_VERSION ;
 int close (int) ;
 int ioctl (int,int ,struct ucode_get_rev_struct*) ;
 int memset (int *,int,int) ;
 int open (int ,int ) ;
 int printf (char*,int) ;

int
main()
{
    int fd, ret;
    uint32_t buf[BUF_SIZE];
    struct ucode_get_rev_struct in_h;

    memset(buf, 0x41, BUF_SIZE);

    in_h.ugv_rev = buf;
    in_h.ugv_size = 0;

    fd = open(UCODE_DEV, O_RDONLY);
    ret = ioctl(fd, UCODE_GET_VERSION, &in_h);

    printf("[+] ret = %d\n", ret);
    printf("[+] ugv_errno = %d\n", in_h.ugv_errno);

    close(fd);
    return ret;
}
